feat: store global excludes in column
